# LandGuardUganda

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Caddyfile  DEMO_RUNBOOK.md  MAINTAINERS.md  QUICKSTART.md  README.md  docker-compose.sepolia.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: build-push.yml  ci.yml  deploy-cranecloud.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  crypto.py  database.py  main.py  resilience.py  tracing.py
backend/app/audit/: __init__.py  ledger.py  merkle.py  verifier.py
backend/app/auth/: __init__.py  dependencies.py  jwt_auth.py  models.py
backend/app/blockchain/: __init__.py  abi.json  anchor_service.py  anvil_client.py  client.py  mock_client.py  models.py  multisig_abi.json  multisig_client.py  sepolia_client.py
backend/app/bootstrap/: __init__.py  seed.py
backend/app/db/migrations/: 001_init.sql  002_review_queue.sql  003_scoring_outbox.sql  004_review_escalation.sql
backend/app/fraud/: __init__.py  features.py  rules.py  scorer.py  worker.py
backend/app/fraud/training/: train.py
backend/app/jobs/: __init__.py  escalation.py  parity.py  scheduler.py
backend/app/middleware/: __init__.py  idempotency.py  limits.py  request_id.py  security_headers.py
backend/app/models/: __init__.py  anchors.py  common.py  disputes.py  fraud.py  owners.py  parcels.py  titles.py  transfers.py  verify.py
backend/app/nira/: __init__.py  cache.py  client.py  live_client.py  mock_client.py
backend/app/routers/: admin.py  anchors.py  demo.py  disputes.py  fraud.py  health.py  nira.py  owners.py  parcels.py  titles.py  transfers.py  ussd.py  verify.py
backend/app/util/: cache.py  geo.py  hashing.py  ids.py  metrics.py  sql.py  ussd.py
backend/scripts/: co_sign_daemon.py  deploy_contract.py  emit_merkle_vectors.py  escalate_pending_reviews.py  fraud_parity_audit.py  issue_dev_tokens.py  load_test.py  seed_demo.py  seed_districts.py  train_fraud_model.py  verify_audit_chain.py
backend/tests/: conftest.py  test_anchor_service.py  test_audit_chain.py  test_config_prod_safety.py  test_escalation.py  test_features.py  test_fraud_review_workflow.py  test_fraud_rules.py  test_like_escape.py  test_merkle_cross.py  test_nira_mock.py  test_readyz_enriched.py  test_resilience.py  test_security_headers.py  test_transfer_fraud_gate.py  test_ussd.py  test_verify_endpoint.py  test_worker_scaling.py
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: LandRegistryAnchor.sol  MultiSigRegistrar.sol
contracts/test/: LandRegistryAnchor.t.sol  MerkleParity.t.sol  MultiSigRegistrar.t.sol  merkle-parity.json
docs/: AI_ETHICS_CHARTER.md  ARCHITECTURE.md  CRANE_CLOUD_DEPLOYMENT.md  CUSTODY.md  DESIGN_SYSTEM.md  GOVERNANCE.md  IMPACT_EVIDENCE.md  REQUIREMENTS.md  SHOWCASE_EVALUATION_MAPPING.md  SLA_TARGETS.md  STANDARDS_ALIGNMENT.md  TEAM.md  USSD_DEPLOYMENT.md
docs/adr/: 0001-dual-merkle-regime.md  0002-zero-trust-posture.md  0003-regional-chain-migration.md
docs/audit/: AUDIT_PACKAGE.md  CODEBASE_MAP.md  PENTEST_SCOPE.md  THREAT_MODEL.md
docs/moa-templates/: MoLHUD-Mityana-Pilot-MOU.md
docs/model-cards/: fraud-scorer.md  isoforest-rules-v2-20260530.md
docs/runbooks/: dppa-breach-notification.md
docs/security/: KEYGEN_CEREMONY.md  README.md
evidence/deployment-tests/20260528T081451Z/: README.md  results.csv
evidence/fraud-parity/20260528T064946Z/: report.json  report.md
evidence/lighthouse/20260525T143155Z/: SUMMARY.md  anchors.report.html  anchors.report.json  root.report.html  root.report.json  titles_UG-MIT-T00007%2F2026.report.html  titles_UG-MIT-T00007%2F2026.report.json  verify.report.html  verify.report.json
evidence/route-tests/20260528T073903Z/: README.md  results.csv
evidence/sbom/: backend-cyclonedx.json  backend-cyclonedx.json.sha256  contracts-cyclonedx.json  contracts-cyclonedx.json.sha256  frontend-cyclonedx.json  frontend-cyclonedx.json.sha256
frontend/: .env.local.example  Dockerfile  README.md  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/e2e/: accessibility.spec.ts  flows.spec.ts  mobile.spec.ts  smoke.spec.ts
frontend/public/: manifest.json  sw.js
frontend/src/__tests__/: merkle.parity.test.ts  merkle.test.ts
frontend/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(public)/: layout.tsx
frontend/src/app/demo/: page.tsx
frontend/src/components/: Providers.tsx  ServiceWorkerRegistrar.tsx
frontend/src/components/certificate/: TitleCertificate.tsx
frontend/src/components/chain/: AnchorTimeline.tsx  ChainStatusBeacon.tsx  LatestAnchorBadge.tsx  MerkleProofVisualizer.tsx  PendingAnchorBadge.tsx
frontend/src/components/common/: Button.tsx  HashDisplay.tsx  StatusPill.tsx
frontend/src/components/demo/: DemoControlPanel.tsx
frontend/src/components/fraud/: FraudExplainer.tsx  ReviewQueue.tsx
frontend/src/components/layout/: CoatOfArmsMark.tsx  DistrictPicker.tsx  LocaleSwitcher.tsx  MinistryHeader.tsx  MobileMenu.tsx  (+3 more)
frontend/src/lib/: api.ts  backendUrl.ts  format.ts  merkle.ts
frontend/src/store/: useAuthStore.ts  useChainStatusStore.ts  useDemoStore.ts  useDistrictStore.ts  useLocaleStore.ts  useRedactStore.ts
frontend/src/styles/: globals.css  print.css
infra/cranecloud/: Makefile  README.md  manifest.yaml
infra/cranecloud/environments/: pilot.env.example  production.env.example  staging.env.example
monitoring/prometheus/: prometheus.yml
scripts/: _sbom_frontend_fallback.py  bootstrap_cranecloud.sh  generate_sbom.sh  lighthouse_ci.sh  load_test.sh  probe_security_headers.sh  probe_verifier.py  setup_github_secrets.sh  verify_offline.py
submission/: LandGuard-Uganda-System-Description.docx  LandGuard-Uganda-System-Description.html  LandGuard-Uganda-System-Description.md  POST_SUBMISSION_PATCHES.md  README.md
submission/diagrams/: 01-c4-context.mmd  02-c4-container.mmd  03-resilience-flow.mmd  04-security-boundaries.mmd
(+19 files in other folders)
