[project]
name = "landguard-backend"
version = "0.1.0"
description = "LandGuard Uganda — Blockchain-Enhanced Land Administration & Titling Support System"
authors = [{ name = "LandGuard Uganda", email = "kalemaaaaaaaa@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.120.0,<0.123",
    "starlette>=0.49.1,<0.51",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.4,<3",
    "uvicorn[standard]>=0.30,<0.35",
    "httpx>=0.27,<0.29",
    "slowapi>=0.1.9",
    "redis>=7.4.0,<8",
    "aiosqlite>=0.20",
    "asyncpg>=0.29,<0.30",
    "psycopg[binary,pool]>=3.2,<4",
    "structlog>=24.4",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "prometheus-client>=0.20",
    "web3>=7.0,<8",
    "eth-account>=0.13",
    "eth-utils>=4",
    "shapely>=2.0",
    "pyproj>=3.6",
    "geojson-pydantic>=1.1",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "numpy>=1.26",
    "rapidfuzz>=3.9",
    "cryptography>=43",
    "pyjwt[crypto]>=2.10,<3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "orjson>=3.10",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-redis",
    "freezegun>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "A", "C4", "T10", "SIM", "ERA", "PL"]
ignore = ["S101", "PLR0913", "PLR2004", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
