[project]
name = "landguard-backend"
version = "0.1.0"
description = "LandGuard Uganda — Blockchain-Enhanced Land Administration & Titling Support System"
authors = [{ name = "LandGuard Uganda", email = "mpairwelauben75@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.120.0,<0.123",
    "starlette>=0.49.1,<0.51",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.4,<3",
    "uvicorn[standard]>=0.30,<0.35",
    "httpx>=0.27,<0.29",
    "slowapi>=0.1.9",
    "redis>=5.0,<6",
    "aiosqlite>=0.20",
    "asyncpg>=0.29,<0.30",
    "psycopg[binary,pool]>=3.3.4,<4",
    "structlog>=24.4",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "prometheus-client>=0.20",
    "web3>=7.0,<8",
    "eth-account>=0.13",
    "eth-utils>=4",
    "shapely>=2.0",
    "pyproj>=3.6",
    "geojson-pydantic>=1.1",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "numpy>=1.26",
    "rapidfuzz>=3.9",
    "cryptography>=43",
    "pyjwt[crypto]>=2.10,<3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "orjson>=3.10",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-redis",
    "freezegun>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "A", "C4", "T10", "SIM", "ERA", "PL"]
ignore = [
    # ─── Pre-existing project-wide tolerances ───
    "S101",      # assert in tests is fine
    "PLR0913",   # FastAPI handlers legitimately take many parameters
    "PLR2004",   # magic numbers in tests / status codes are fine
    "E501",      # line length is enforced by formatter, not lint
    # ─── Intentional patterns in this codebase ───
    "PLW0603",   # `global _CLIENT/_LEDGER/_VERIFIER/_MODEL/_REDIS/_RUNNING`
                 # is the singleton/breaker pattern. Every occurrence is
                 # deliberate and isolated to module-scope getters.
    "S311",      # `random` is only used for demo seed jitter
                 # (bootstrap/seed.py), IsolationForest training shuffle,
                 # and circuit-breaker backoff jitter (resilience.py).
                 # None of these are crypto.
    "S608",      # The f-string SQL fragments in anchors.py and
                 # anchor_service.py interpolate only column predicates
                 # ('WHERE district_id = ?'); the actual value is still
                 # parameter-bound.
    "PLR0911",   # Guard-clause early-returns in middleware/idempotency,
                 # routers/ussd, fraud/rules — collapsing them would
                 # hurt readability.
    "S105",      # Test fixtures legitimately set known weak JWT secrets
                 # in conftest.py for isolation.
    "S110",      # try/except/pass appears in best-effort audit/cleanup
                 # paths (e.g. test-fixture cleanup). The intent is
                 # "do not fail on idempotency"; logging would be noise.
    "S112",      # Same rationale for try/except/continue in parcels.py
                 # geometry-overlap loop.
    "PLC0415",   # In-function imports — widely used in this codebase
                 # for lazy loading (e.g. tracing, optional otel) and
                 # circular-import avoidance (e.g. audit ledger
                 # importing get_connection inside its methods).
    "UP042",     # `class Role(str, Enum)` — could be `StrEnum` (3.11+),
                 # but the multi-inheritance form is intentional for
                 # JSON serialisation explicitness.
    "UP046",     # Generic-class type-parameter syntax (3.12+) —
                 # codebase still uses the `Generic[T]` form for
                 # readability and to match Pydantic 2's docs.
    "UP047",     # Generic-function type-parameter syntax (3.12+) —
                 # same rationale.
]
# Webhook contracts (e.g. Africa's Talking POST bodies) require exact
# argument-name casing — `sessionId`, `phoneNumber`, etc. Lift N803 there.
per-file-ignores = { "app/routers/ussd.py" = ["N803"] }

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
